add social links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -24,7 +24,8 @@
       <br>
       <h5 class="color c-white links">Follow Us</h5>
       <div class="d-flex">
-        <a target="blank" class="socmed-link" href="https://www.instagram.com/ksenia_crm/?igshid=1j8vk08bfpfnx"><i class="fab fa-instagram"></i></a>
+        <a target="blank" class="socmed-link" href="https://www.facebook.com/artyqueagency/"><i class="fab fa-facebook"></i></a>
+        <a target="blank" class="socmed-link" href="https://www.instagram.com/artyqueagency/"><i class="fab fa-instagram"></i></a>
         <a target="blank" class="socmed-link" href="https://www.linkedin.com/company/artyquecom/about/"><i class="fab fa-linkedin"></i></a>
       </div>
      
