--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -19,7 +19,10 @@ nav.navbar.d-block.d-sm-none
         = link_to 'News', news_posts_path, class: 'navbar-link'
     ul.social
       li
-        a[href="https://www.instagram.com/ksenia_crm/?igshid=1j8vk08bfpfnx" target="_blank"]
+        a[href="https://www.facebook.com/artyqueagency/" target="_blank"]
+          i.fab.fa-facebook
+      li
+        a[href="https://www.instagram.com/artyqueagency/" target="_blank"]
           i.fab.fa-instagram
       li
         a[href="https://www.linkedin.com/company/artyquecom/about/" target="_blank"]
