add facebook pixel

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,11 +16,25 @@ html
     / Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142247307-1">
     javascript:
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-     gtag('config', 'UA-142247307-1');
+      gtag('config', 'UA-142247307-1');
+
+    javascript:
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version=‘2.0’;
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,‘script’,
+      ’https://connect.facebook.net/en_US/fbevents.js');
+      fbq(‘init’, ‘195554584971478’);
+      fbq(‘track’, ‘PageView’);
+    noscript
+      img[height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=195554584971478&ev=PageView&noscript=1"]
   body
     = render 'shared/flashes'
     main.page-wrap
