--- a/app/assets/stylesheets/components/_artwork.scss
+++ b/app/assets/stylesheets/components/_artwork.scss
@@ -1,10 +1,12 @@
 .artwork{
   .artwork-photos{
     img{
-      min-height: 20rem;
       max-height: 75vh;
+      max-width: 100%;
       width: auto;
       pointer-events: none;
+      margin-right: 0.5rem;
+      margin-left: 0.5rem;
     }
     margin-bottom: 5rem;
   }
