--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,10 +16,13 @@
 		  </div>
 		</div>
 	</div>
-</div> 
+</div>
 <div id="content" class="mb-5" data-controller="modal">
-  <%= render "shared/featured_artist" %>
-  <%= render "shared/quote_block" %>
+  <%#= render "shared/featured_artist" %>
+  <%#= render "shared/quote_block" %>
+  <%= render "shared/top_artists" %>
+  <%= render "shared/page_description" %>
+  <%= render "shared/how_it_works" %>
   <%= render 'shared/featured_artworks' %>
   <%= render "shared/featured_stories" %>
   <%= render 'shared/stim_modal' %>
