--- a/app/views/shared/_how_it_works.html.slim
+++ b/app/views/shared/_how_it_works.html.slim
@@ -1,18 +1,22 @@
+.line-wrapper
+  .container
+    h4.title.text-center HOW IT WORKS
 .container
-  h4.title.text-center HOW IT WORKS
   .steps-container
-    .HIW-card
-      .image-one
-        p here goes the image
-      h3.step 1. Collect
-      p Choose from a hand-picked sellection of artists presented by ARTYQUE agency.
-  .HIW-card
-      .image-two
-        p here goes the image
-      h3.step 2. Promote
-      p Make sure the story of your new artwork continues after it gets to you. We propose carefull tailored projects to grow the visibility of your collected works to secure your invesment growth.
-  .HIW-card
-      .image-three
-        p here goes the image
-      h3.step 3. Thrive
-      p instead of simply following trends, set them by supporting our artists and benefit from their growth.
+    .row.justify-content-center
+      .col-12.col-md-6.col-lg-4
+        .HIW-card
+          .image[style="background-image: url('https://picsum.photos/300')"]
+          h3.step.mt-4 1. Collect
+          p Choose from a hand-picked sellection of artists presented by ARTYQUE agency.
+      .col-12.col-md-6.col-lg-4
+        .HIW-card
+            .image[style="background-image: url('https://picsum.photos/300')"]
+            h3.step.mt-4 2. Promote
+            p Make sure the story of your new artwork continues after it gets to you. We propose carefull tailored projects to grow the visibility of your collected works to secure your invesment growth.
+      .col-12.col-md-6.col-lg-4
+        .HIW-card
+            .image[style="background-image: url('https://picsum.photos/300')"]
+
+            h3.step.mt-4 3. Thrive
+            p instead of simply following trends, set them by supporting our artists and benefit from their growth.
