home page finished

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -118,20 +118,10 @@
   }
 }
 
-.artists-buttons{
-  margin: 0 auto;
-  max-width: 420px;
-  text-align: center;
-  .artist-button{
-    min-width: 192px;
-    margin-bottom: 20px;
-  }
-}
-
 .HIW-card{
   text-align: center;
   max-width: 350px;
-  margin: 77px auto 0 auto;
+  margin: 0 auto 77px auto;
   .image{
     width: 150px;
     height: 150px;
