--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/contact_cta" unless @contact_page %>
+<%#= render "shared/contact_cta" unless @contact_page %>
 <footer class="footer">
   <div class="inner-top-footer">
     <ul class="legal-foot-note links">
@@ -28,7 +28,7 @@
         <a target="blank" class="socmed-link" href="https://www.instagram.com/artyqueagency/"><i class="fab fa-instagram"></i></a>
         <a target="blank" class="socmed-link" href="https://www.linkedin.com/company/artyquecom/about/"><i class="fab fa-linkedin"></i></a>
       </div>
-     
+
     </ul>
   </div>
   <div class="image d-none d-sm-block">
