--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -1,15 +1,16 @@
 - if @featured_artists.empty?
 - else
   .line-wrapper
-    .container
-      h4.title OUR ARTISTS
+    .container.d-flex.justify-content-between
+      h4.title. OUR ARTISTS
+      hr.lines.w-75
   .container.mb-5
     .row.artists-cards
       - @featured_artists.each do |artist|
         .artist-card.col-12.col-md-6.col-lg-4.align-self-star
           .artist-image[style="background-image: url('#{cl_image_path artist.photo}')"]
           p.artist-name #{artist.name}
-    .row.artists-buttons.mb-4
+    .row.two-buttons-container.mb-4
       .col-12.col-sm-6
         = link_to "Discover More Artists", news_posts_path, class: "button-primary artist-button"
       .col-12.col-sm-6
