--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,7 +7,7 @@
 		min-height: 710px;
     height: calc(100vh - #{$header-height});
 		@include media-breakpoint-up(sm) {
-			min-height: 0;	
+			min-height: 0;
 		}
 	}
 }
@@ -37,7 +37,7 @@
         height: 40vh !important;
       }
     }
-    
+
 		height: calc(100vh - #{$header-height});
 		@include media-breakpoint-up(sm) {
       height: 80vh;
@@ -58,7 +58,7 @@
       }
     }
   }
-	.banner-card-subtitle {	
+	.banner-card-subtitle {
 	    bottom: 0;
 	   	font-size: 11px;
 	    @include media-breakpoint-up(sm) {
@@ -76,7 +76,7 @@
       @include media-breakpoint-up(sm) {
         padding: 0;
         padding-left: 20px;
-    }    
+    }
     	@include media-breakpoint-up(lg) {
     		padding: 0;
 	    	padding-left: 50px;
@@ -131,3 +131,41 @@
     width: 100%;
   }
 }
+
+// -----------------------
+
+.new-look-banner {
+  @extend .bg-blue-gradient;
+  height: calc(100vh - #{$header-height});
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &.secondary-banner{
+    min-height: 400px;
+  }
+  .main-text{
+    max-width: 960px;
+    margin: 0 auto;
+    letter-spacing: 3px;
+    font-size: 37px;
+  }
+  .title{
+    font-weight: 300;
+  }
+}
+
+
+.second-font{
+  font-family: 'Merriweather Sans', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 42px;
+  line-height: 145.5%;
+}
+
+.bold {
+  font-weight: 700;
+  letter-spacing: 0px;
+}
+
