--- a/app/views/shared/_featured_stories.html.slim
+++ b/app/views/shared/_featured_stories.html.slim
@@ -4,11 +4,11 @@
 			div.col.d-flex.line-left
 				h4.title Recent News
 				hr.lines.w-75
-.container
+.container.mb-3
 	.row
     - @news_posts.each do |news_post|
       .col-12.col-sm-6.p-2.mb-2
         = render 'news_posts/card', news_post: news_post
-  .row
-    .col-12.text-center
-      = link_to "See All Articles", news_posts_path, class: "button-primary"
+  / .row
+  /   .col-12.text-center
+  /     = link_to "See All Articles", news_posts_path, class: "button-primary"
