--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,18 +6,21 @@
     <ul class="navbar-items d-sm-flex d-none">
       <li><%= link_to "Home", root_path, class: "#{'active' if current_page?(root_path)}" %></li>
       <li><%= link_to "Artists", artists_path , class: "#{'active' if current_page?(artists_path)}"%></li>
-    	<li>
+      <li><%= link_to "About", about_path, class: "#{'active' if current_page?(about_path)}" %></li>
+      <li><%= link_to "Contact us", contact_path, class: "nav-btn" %></li>
+
+    	<!-- <li>
     		<div class="dropdown">
 			  <a id="dropdownMenuButton" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			    About us  <i class="fas fa-caret-down"></i>
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <%= link_to "Who We Are", about_path, class: "dropdown-item #{'active' if current_page?(about_path)}" %>
-          <%= link_to "Contact", contact_path, class: "dropdown-item #{'active' if current_page?(contact_path)}" %>
-          <%= link_to "News", news_posts_path, class: "dropdown-item #{'active' if current_page?(news_posts_path)}" %>
+          <%#= link_to "Who We Are", about_path, class: "dropdown-item #{'active' if current_page?(about_path)}" %>
+          <%#= link_to "Contact", contact_path, class: "dropdown-item #{'active' if current_page?(contact_path)}" %>
+          <%#= link_to "News", news_posts_path, class: "dropdown-item #{'active' if current_page?(news_posts_path)}" %>
 			  </div>
 			</div>
-		</li>
+		</li> -->
     </ul>
   </div>
   <%= render 'shared/navbar' %>
