About -> implements banner

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,17 +1,41 @@
-<div class="secondary-banner">
+<div class="new-look-banner about-banner">
+  <div class="line-wrapper w-100">
+    <div class="d-flex justify-content-between">
+      <h4 class="title color c-white ml-10perc">ABOUT US</h4>
+      <hr class="lines w-75">
+    </div>
+  </div>
+  <div class="about-text">
+    <p class="text-justify">
+      Collecting art is complicated, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
+    </p>
+    <br>
+    <p class="text-justify">
+      We went through this struggle too. Isn’t there a missing step that would ease the transition from emerging to established artists? And so we came up with an idea: by guiding an artist’s career we could ensure his growth and increase the value of his works in an organic and steady way.
+    </p>
+    <br>
+    <p class="text-justify">
+      We created ARTYQUE agency to give a business and curatorial hand to artists we select and believe in, and to make collecting art easier, more rewarding and beneficial in the long term.
+    </p>
+  </div>
+</div>
+
+
+
+<!-- <div class="secondary-banner">
 	<div class="banner-text">
 	  <h1 class="title color c-white">About Us</h1>
 	  <br>
 	  <p class="color c-white">We are a young Berlin based agency dedicated to the success of the new generation of emerging and mid-career Artists. Our mission is to support the most exceptional creative minds out there to develop their career and share their vision and Art with the world. </p>
 	</div>
-</div>
+</div> -->
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
 
 
 <div id="about"></div>
 <%= render 'shared/about_section' %>
-<!-- <div class="laptop-carousel-wrapper">
+<!--  <div class="laptop-carousel-wrapper">
 	<div class="container">
 		<div class="col intro-laptop">
 			<h4 class="title text-center">join the artyque family</h1>
@@ -28,4 +52,5 @@
       <%= link_to 'Get in Touch', contact_path, class: 'button-primary' %>
 		</div>
 	</div>
-</div> -->
+</div>
+ -->
