--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -7,7 +7,7 @@
         h4.header-text.color.mt-3.c-white.second-font. Collect with <strong class="bold">ARTYQUE</strong>
       .row.two-buttons-container.mt-4
         .col-12.col-sm-6
-          = link_to "Schedule a call", news_posts_path, class: "button-primary artist-button"
+          = link_to "Schedule a call", "#", class: "button-primary artist-button"
         .col-12.col-sm-6
-          = link_to "Available Works", news_posts_path, class: "button-secondary artist-button"
+          = link_to "Available Works", "#", class: "button-secondary artist-button"
 
