--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -12,7 +12,7 @@
           p.artist-name #{artist.name}
     .row.two-buttons-container.mb-4
       .col-12.col-sm-6
-        = link_to "Discover More Artists", news_posts_path, class: "button-primary artist-button"
+        = link_to "Discover More Artists", artists_path, class: "button-primary artist-button"
       .col-12.col-sm-6
         = link_to "Available Works", news_posts_path, class: "button-primary artist-button"
 
