--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -137,12 +137,26 @@
 .new-look-banner {
   @extend .bg-blue-gradient;
   height: calc(100vh - #{$header-height});
+  max-height: 900px;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 1300px;
+  &.about-banner {
+    height: auto;
+    min-height: calc(100vh - #{$header-height});
+    flex-direction: column;
+    align-items: start;
+    @extend .c-white;
+    justify-content: normal;
+    .about-text {
+      max-width: 690px;
+      margin: 0px 56px 36px 56px;
+    }
+  }
   &.secondary-banner{
-    min-height: 400px;
+    max-height: 400px;
   }
   .main-text{
     max-width: 960px;
