--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -7,4 +7,4 @@
         h1.header-text.color.mt-3.c-white.second-font.main-text. We support the career of emerging artists to secure their value growth
       .row.two-buttons-container.mt-4
         .col-12.col-sm-6
-          = link_to "Schedule a call", news_posts_path, class: "button-primary artist-button"
+          = link_to "Schedule a call", "#", class: "button-primary artist-button"
