--- a/app/views/shared/_page_description.html.slim
+++ b/app/views/shared/_page_description.html.slim
@@ -1,5 +1,7 @@
 .mt-4
   br
   br
-  p.text-center.px-5 laksdjf;alskd f;asldkjf a;skdjflsdk jflskj aflkdjf lskd jalkdjf alksdjf laksdjf laksdj flaksdjf laksdjf laksdj flasdkjf asldkfj aldskf alsdkfj aldsk jlkjlakjfalksd jfal \n laksjfdlaksdjfalksdjf laksdfj alds j
-  p.text-center.px-5 alskjdflaskdj flaks dflaksdf lasd jflaksd jflaksdj flaksd jflaksdj fadksljfa;klsd jflkasd;flkaj sd;fk ja;sdk fakdsj lfasdf,mas.d,fmalsdkfja sdf.adsmf.
+  p.text-center.px-5.home-text Collecting emerging Art is the start of an exciting journey, but surely also of a risky one. It is hard to predict if collected works will grow in value over the years. With tastes and trends constantly changing, it is difficult to anticipate which artist will become the next sensation.
+  br
+  br
+  p.text-center.px-5.home-text With ARTYQUE, instead of simply collecting works, you can be part of something bigger, where the act of collecting supports the artist in new and powerful ways. Become a tastemaker and take the future of your collection into your own hands.
