--- a/app/assets/stylesheets/design_toolbox/_margin.scss
+++ b/app/assets/stylesheets/design_toolbox/_margin.scss
@@ -1,3 +1,9 @@
-.ml-10perc {
-  margin-left: 10%;
+.ml-13perc {
+  margin-bottom: 0;
+  margin-left: 13%;
+}
+
+.ml-7perc {
+  margin-bottom: 0;
+  margin-left: 7%;
 }
