--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,8 @@
-<div class="new-look-banner about-banner">
+<div class="new-look-banner bg-blue-gradient about-banner">
   <div class="line-wrapper w-100">
-    <div class="d-flex justify-content-between">
-      <h4 class="title color c-white ml-10perc">ABOUT US</h4>
-      <hr class="lines w-75">
+    <div class="d-flex justify-content-between align-items-center">
+      <h4 class="title color c-white ml-13perc">ABOUT US</h4>
+      <hr class="lines w-70">
     </div>
   </div>
   <div class="about-text">
@@ -20,6 +20,10 @@
   </div>
 </div>
 
+<%= render "shared/our_services" %>
+<div class="new-look-banner bg-blue-gradient secondary-banner"></div>
+<%= render "shared/who_is_artyque" %>
+<%= render "shared/footer_banner" %>
 
 
 <!-- <div class="secondary-banner">
@@ -29,12 +33,12 @@
 	  <p class="color c-white">We are a young Berlin based agency dedicated to the success of the new generation of emerging and mid-career Artists. Our mission is to support the most exceptional creative minds out there to develop their career and share their vision and Art with the world. </p>
 	</div>
 </div> -->
-<%= render 'shared/line_intro' %>
-<%= render 'shared/cards' %>
+<%#= render 'shared/line_intro' %>
+<%#= render 'shared/cards' %>
 
 
-<div id="about"></div>
-<%= render 'shared/about_section' %>
+<!-- <div id="about"></div> -->
+<%#= render 'shared/about_section' %>
 <!--  <div class="laptop-carousel-wrapper">
 	<div class="container">
 		<div class="col intro-laptop">
