--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="about-text">
     <p class="text-justify">
-      Collecting art is complicated, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
+      <strong>Collecting art is complicated</strong>, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
     </p>
     <br>
     <p class="text-justify">
