--- a/app/assets/stylesheets/design_toolbox/_button.scss
+++ b/app/assets/stylesheets/design_toolbox/_button.scss
@@ -43,3 +43,18 @@
     }
   }
 }
+
+.two-buttons-container{
+  margin: 0 auto;
+  max-width: 420px;
+  text-align: center;
+  .artist-button{
+    min-width: 192px;
+    margin-bottom: 20px;
+  }
+  @media (max-width: 540px) {
+  .artist-button {
+    width: 100% !important;
+  }
+}
+}
