--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-<div class="new-look-banner bg-blue-gradient about-banner">
+<div class="new-look-banner bg-blue-gradient about-banner position-relative">
+  <div class="top-right-circle"></div>
+  <!-- <div class="bot-left-circle"></div> -->
   <div class="line-wrapper w-100">
     <div class="d-flex justify-content-between align-items-center">
       <h4 class="title color c-white ml-13perc">ABOUT US</h4>
