--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -1,4 +1,4 @@
-.new-look-banner.secondary-banner.mt-5.bg-blue-gradient
+.new-look-banner.secondary-banner.mt-5
   .banner-content
     .row
       .col-12
