adds svgs to main banner

--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -1,4 +1,6 @@
-.new-look-banner.bg-blue-gradient
+.new-look-banner.bg-blue-gradient.position-relative.wrapper-banner
+  img.home-wave-top.wave-top.position-absolute.drag-disable src="#{image_path('top_wave.svg')}"
+  img.wave-bottom.position-absolute.drag-disable src="#{image_path('bottom_wave.svg')}"
   .banner-content
     .row
       .col-12
