small changes to css

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -141,7 +141,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1300px;
+  // max-width: 1300px;
   overflow: hidden;
   &.about-banner {
     height: auto;
