--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="new-look-banner bg-blue-gradient about-banner position-relative">
+<div class="new-look-banner bg-blue-gradient about-banner position-relative height-fit">
   <div class="top-right-circle"></div>
   <!-- <div class="bot-left-circle"></div> -->
   <div class="line-wrapper w-100">
