--- a/app/views/shared/_who_is_artyque.html.slim
+++ b/app/views/shared/_who_is_artyque.html.slim
@@ -1,7 +1,7 @@
 .new-look-banner.who-is-artyque.bg-white
   .line-wrapper.w-100.ml-7perc
     .d-flex.justify-content-between.align-items-center.title
-      h4. WHO IS ARTYQUE
+      h4.title Who is Artyque
       HR.lines.w-70
   .who-is-text
     p. <strong>ARTYQUE</strong> was founded by two art enthusiasts, Mattia Cremieux and Ksenia Stepanova, to gather a great community of emerging artists, art lovers, collectors and art institutions around a common goal: grow together in a more rewarding way.
