--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -2,7 +2,7 @@
 - else
   .line-wrapper
     .container.d-flex.justify-content-between
-      h4.title. OUR ARTISTS
+      h4.title. Ou Artists
       hr.lines.w-75
   .container.mb-5
     .row.artists-cards
