--- a/app/views/shared/_who_is_artyque.html.slim
+++ b/app/views/shared/_who_is_artyque.html.slim
@@ -1,4 +1,4 @@
-.new-look-banner.who-is-artyque.bg-white
+.new-look-banner.who-is-artyque.bg-white.height-fit
   .line-wrapper.w-100.ml-7perc
     .d-flex.justify-content-between.align-items-center.title
       h4.title Who is Artyque
