implements link_to artist on artist section on homepage

--- a/app/assets/stylesheets/design_toolbox/_link.scss
+++ b/app/assets/stylesheets/design_toolbox/_link.scss
@@ -12,3 +12,11 @@ a{
     @extend .color-beige;
   }
 }
+
+.link-0-0 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
