--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,8 +24,10 @@
   <%= render "shared/top_artists" %>
   <%= render "shared/page_description" %>
   <%= render "shared/how_it_works" %>
+  <%= render "shared/quote_banner" %>
   <%#= render 'shared/featured_artworks' %>
   <%= render "shared/footer_banner" %>
   <%= render "shared/featured_stories" %>
+  <%= render "shared/newsletter_signup" %>
   <%#= render 'shared/stim_modal' %>
 </div>
