--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -6,7 +6,7 @@
       .col-12
         h4.title.color.c-white. THE ART MARKET IS UNCERTAIN
       .title.color.c-white.text-center.col-12
-        h1.header-text.color.mt-3.c-white.second-font.main-text. We support the career of emerging artists to secure their value growth
+        h1.header-text.color.mt-3.c-white.second-font.main-text. We <strong>support</strong> the career of emerging artists to secure their <strong>value growth</strong>.
       .row.two-buttons-container.mt-4
         .col-12.col-sm-6
           = link_to "Schedule a call", "#", class: "button-primary artist-button"
