--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -96,10 +96,23 @@
 // -------------
 
 .artists-cards{
-  max-width: 888px;
-  margin: 0 auto;
+  @media (max-width: 767px) {
+    &.justify-center-mobile {
+      justify-content: center !important;
+    }
+  }
   .artist-card{
     margin-bottom: 37px;
+    max-width: 273px;
+    text-align: right;
+    height: 197px;
+    p {
+      margin: 0;
+    }
+    .f-9 {
+      font-size: 9px;
+      letter-spacing: 3px;
+    }
     .artist-image{
       box-shadow: 0 0 44px rgb(150,150,150);
       margin: 0 auto;
@@ -111,24 +124,34 @@
       background-position: center;
       border-radius: 5px;
     }
-    .artist-name{
-      text-align: center;
-      padding-top: 12px;
+    .artist-full-name{
+      font-weight: 600;
+      font-size: 12px;
     }
   }
 }
 
 .HIW-card{
   text-align: center;
-  max-width: 350px;
+  max-width: 272px;
   margin: 0 auto 77px auto;
+  box-shadow: 0 0 105px #9db5bb;
   .image{
-    width: 150px;
-    height: 150px;
+    height: 235px;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    border-radius: 4px;
+    border-radius: 4px 4px 0 0;
+  }
+  .text {
+    padding: 0 27px 27px;
+    height: 182px;
+    margin: 0;
+    font-size: 14px;
+    @media (max-width: 767px) {
+      display: flex;
+      align-items: center;
+    }
   }
 }
 
