--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -2,12 +2,12 @@
   .banner-content
     .row
       .col-12
-        h4.title.color.c-white. BE STRATEGIC
-      .title.color.c-white.text-center.col-12
-        h4.header-text.color.mt-3.c-white.second-font. Collect with <strong class="bold">ARTYQUE</strong>
+        h4.title.color.c-dark-blue. BE STRATEGIC
+      .title.color.c-dark-blue.text-center.col-12
+        h4.header-text.color.mt-3.c-dark-blue.coachella-black.footer-banner-text. Collect with ARTYQUE.
       .row.two-buttons-container.mt-4
         .col-12.col-sm-6
-          = link_to "Schedule a call", "#", class: "button-primary artist-button"
+          = link_to "Schedule a call", "#", class: "button-primary artist-button footer-button"
         .col-12.col-sm-6
-          = link_to "Available Works", "#", class: "button-secondary artist-button"
+          = link_to "Available Works", "#", class: "button-secondary artist-button footer-button"
 
