--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -1,12 +1,15 @@
 .new-look-banner.bg-blue-gradient.position-relative.wrapper-banner
   img.home-wave-top.wave-top.position-absolute.drag-disable src="#{image_path('top_wave.svg')}"
   img.wave-bottom.position-absolute.drag-disable src="#{image_path('bottom_wave.svg')}"
-  .banner-content
-    .row
-      .col-12
-        h4.title.color.c-white. THE ART MARKET IS UNCERTAIN
-      .title.color.c-white.text-center.col-12
-        h1.header-text.color.mt-3.c-white.second-font.main-text. We <strong>support</strong> the career of emerging artists to secure their <strong>value growth</strong>.
-      .row.two-buttons-container.mt-4
-        .col-12.col-sm-6
-          = link_to "Schedule a call", "#", class: "button-primary artist-button"
+  .fake-container
+    .banner-content
+      .row
+        .col-12
+          h4.title.color.c-white. THE ART MARKET IS UNCERTAIN
+        .title.color.c-white.text-center.col-12
+          h1.header-text.color.mt-3.c-white.second-font.main-text.coachella-light. We <strong>support</strong> the career of emerging artists to secure their <strong>value growth</strong>.
+        .row.two-buttons-container.mt-4
+          .col-12.col-sm-6
+            = link_to "Schedule a call", "#", class: "button-primary artist-button"
+    .circle.banner-circle.bg-blue.c-white.rotating
+      p.title. <strong>·</strong>ARTYQUE FOR<strong>·</strong> COLLECTORS
