--- a/app/views/shared/_quote_banner.html.slim
+++ b/app/views/shared/_quote_banner.html.slim
@@ -1,5 +1,5 @@
 .new-look-banner.quote-banner
-  .text
-    p.quote “This artist is the best artist this generation has to offer for the future”
-    p.title.quote-author.c-white - Le Monde art guide
+  .container
+    p.quote.coachella-light “#{@home_page_quotation.quotation}”
+    p.title.quote-author.c-white - #{@home_page_quotation.caption}
 
