--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -142,9 +142,12 @@
   justify-content: center;
   align-items: center;
   // max-width: 1300px;
-  overflow: hidden;
+  // overflow: hidden;
+  &.wrapper-banner {
+    overflow: visible;
+  }
   strong {
-    font-weight: 600;
+    font-family: 'Coachella Bold'
   }
   &.quote-banner{
     background-color: $dark-blue;
@@ -203,12 +206,19 @@
   }
   &.sign-up-banner {
     max-height: 400px;
+    .header-text {
+      letter-spacing: 2px;
+      font-size: 38px;
+    }
   }
   &.secondary-banner{
     max-height: 400px;
-    background: image-url('footer_bg.jpg');
+    background: image-url('bg.jpg');
     background-size: cover;
     background-position: center;
+    .footer-banner-text{
+      letter-spacing: 2px;
+    }
   }
   @media (max-width: 540px) {
     &.secondary-banner{
