--- a/app/assets/stylesheets/components/_line_intro.scss
+++ b/app/assets/stylesheets/components/_line_intro.scss
@@ -1,6 +1,7 @@
 .line-wrapper {
 	padding: 100px 0 40px 0;
 	position: relative;
+  z-index: 0;
 	.title {
 		font-size: 12px;
 		line-height: 34px;
