--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -7,6 +7,7 @@
   .fake-container.mb-5
     .row.justify-content-between.artists-cards.justify-center-mobile
       .artist-card.col-lg-2.bg-beige.top-artist-button
+        = link_to '', artists_path, class: "link-0-0"
         .left
           p.coachella-regular Discover
           p.underline.coachella-regular our Artists
@@ -16,9 +17,10 @@
         - photo_extension = artist.photo.url.split('.').last
         = photo_extension == 'png' ? (render 'pages/home/png_card', artist: artist, first_name: first_name, last_name: last_name) : render('pages/home/not_png_card', artist: artist, first_name: first_name, last_name: last_name)
       .artist-card.col-lg-2.bg-beige.top-artist-button
+        = link_to '', '#', class: "link-0-0"
         .right
           p.coachella-regular Available
-          p.coachella-regular Works
+          p.coachella-regular.underline Works
     .row.two-buttons-container.mb-4.lg-hide.justify-content-center
       .col-12.col-sm-6.center-margin
         = link_to "Discover More Artists", artists_path, class: "button-primary artist-button"
